[package]
name = "psva4_model"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_with = "2"
serde_json = "1"
bimap = {version = "0.6", features = ["serde"]}
nalgebra = {version = "0.31", features = ["serde-serialize"]}
cgalg = {path = "../cgalg"}
